--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     
 
       <div class="theme-toggle" onclick="toggleTheme()">
-        Mode: <span data-theme-label>Light</span>
-      </div>
+  <img id="icon-sun" src="img/sun.svg" width="20" alt="Light mode">
+  <img id="icon-moon" src="img/moon.svg" width="20" alt="Dark mode" style="display:none;">
+</div>
+
     </div>
 
     <!-- links -->
