--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     
 
       <div class="theme-toggle" onclick="toggleTheme()">
-  <img id="icon-sun" src="img/sun.svg" width="20" alt="Light mode">
-  <img id="icon-moon" src="img/moon.svg" width="20" alt="Dark mode" style="display:none;">
+  <img id="icon-sun" src="img/sun.svg" width="20">
+<img id="icon-moon" src="img/moon.svg" width="20" style="display:none;">
 </div>
 
     </div>
