--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     
 
       <div class="theme-toggle" onclick="toggleTheme()">
-  <img id="icon-sun" src="img/sun.svg" width="20">
-<img id="icon-moon" src="img/moon.svg" width="20" style="display:none;">
-</div>
+        <img id="icon-sun" width="20">
+        <img id="icon-moon" width="20" style="display:none;">
+      </div>
+
 
     </div>
 
