--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
   <div class="container navbar">
     
     <!-- top row (mobile) -->
+    <header>
+  <div class="container navbar">
+
     <div class="nav-row">
       <div class="theme-toggle" onclick="toggleTheme()">
-        <img id="icon-sun" width="20">
-        <img id="icon-moon" width="20" style="display:none;">
+        <img id="icon-sun" width="20" alt="Light mode">
+        <img id="icon-moon" width="20" alt="Dark mode" style="display:none;">
       </div>
+    </div>
 
-    <!-- links -->
     <nav class="nav-links" id="navLinks">
       <a href="index.html">Home</a>
       <a href="guide.html">Guide</a>
@@ -31,6 +34,7 @@
 
   </div>
 </header>
+
 
 <!-- playful neo-brutal background -->
 <div class="doodles">
