--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </nav>
 
     <div class="theme-toggle" onclick="toggleTheme()">
-      Mode: <span data-theme-label>Light</span>
+      <span data-theme-label>Light Mode</span>
     </div>
   </div>
 </header>
