--- a/airdroplist.html
+++ b/airdroplist.html
@@ -20,7 +20,7 @@
       <a href="faq.html">FAQ</a>
     </nav>
     <div class="theme-toggle" onclick="toggleTheme()">
-      Mode: <span data-theme-label>Light</span>
+      <span data-theme-label>Light</span>
     </div>
   </div>
 </header>
